@@ -1,3 +1,7 @@
+* important changes in version 1.68 17/08/2010
+- Apply a patch from Colin Newell that checks whether long files can be created or
+  not in 02_methods.t. Hopefully resolves RT #57312 and RT #56163
+
 * important changes in version 1.66 26/07/2010
 - Applied a patch from Alexandr Ciornii [RT#59699] to Makefile.PL which produces better META.yml
 - Apply a patch from Alexandr Ciornii to ptar [RT#59700]:
